Изменена структура фильтра модуля Выставки

--- a/src/index.html
+++ b/src/index.html
@@ -1279,19 +1279,19 @@
                                                     <i class="fa fa-calendar" aria-hidden="true"></i>
                                                     <span>Период проведения:</span></div>
                                                 <span class="start_date">19 ноября 2018</span>
-                                                <span class="end_date">19 ноября 2018</span>
+                                                <span class="end_date">21 ноября 2018</span>
                                             </div>
-                                            <div class="operation_mode">
-                                                <div class="label">
-                                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                                    <span>Режим работы:</span>
-                                                </div>
-                                                <span class="time">10.00 - 18.00</span>
-                                            </div>
-                                            <div class="adress">
+                                            <!--<div class="operation_mode">-->
+                                            <!--<div class="label">-->
+                                            <!--<i class="fa fa-clock-o" aria-hidden="true"></i>-->
+                                            <!--<span>Режим работы:</span>-->
+                                            <!--</div>-->
+                                            <!--<span class="time">10.00 - 18.00</span>-->
+                                            <!--</div>-->
+                                            <div class="geo">
                                                 <div class="label">
                                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                    <span>Место положение:</span>
+                                                    <span>Место проведения:</span>
                                                 </div>
                                                 <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
                                             </div>
@@ -1324,20 +1324,30 @@
                             <div class="wrap_card">
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <img src="images/content/mod_puppies/img_card006.jpg" alt="">
-                                        <div class="breed">Австралийский шелковистый
-                                            терьер
-                                        </div>
+                                        <h3>Республиканская выставка породистых собак «Лидер - 2018»</h3>
+                                        <img src="images/content/mod_show_dogs/img_show_dogs002.jpg" alt="">
+
                                         <div class="fields">
-                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
-                                                <span>Мальчик</span></div>
-                                            <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                <span>19 ноября 2018</span>
+                                            <div class="period">
+                                                <div class="label">
+                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                    <span>Период проведения:</span></div>
+                                                <span class="start_date">19 ноября 2018</span>
+                                                <span class="end_date">21 ноября 2018</span>
                                             </div>
-                                            <div class="adress">
-                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Украина, г.Киев, ул.Грушевского 129</span>
+                                            <!--<div class="operation_mode">-->
+                                            <!--<div class="label">-->
+                                            <!--<i class="fa fa-clock-o" aria-hidden="true"></i>-->
+                                            <!--<span>Режим работы:</span>-->
+                                            <!--</div>-->
+                                            <!--<span class="time">10.00 - 18.00</span>-->
+                                            <!--</div>-->
+                                            <div class="geo">
+                                                <div class="label">
+                                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                    <span>Место проведения:</span>
+                                                </div>
+                                                <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -1368,18 +1378,30 @@
                             <div class="wrap_card">
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <img src="images/content/mod_puppies/img_card003.jpg" alt="">
-                                        <div class="breed">Американский бульдог</div>
+                                        <h3>Республиканская выставка породистых собак «Лидер - 2018»</h3>
+                                        <img src="images/content/mod_show_dogs/img_show_dogs001.jpg" alt="">
+
                                         <div class="fields">
-                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
-                                                <span>Мальчик</span></div>
-                                            <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                <span>19 ноября 2018</span>
+                                            <div class="period">
+                                                <div class="label">
+                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                    <span>Период проведения:</span></div>
+                                                <span class="start_date">19 ноября 2018</span>
+                                                <span class="end_date">21 ноября 2018</span>
                                             </div>
-                                            <div class="adress">
-                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Россия, г.Воронеж, ул.Октябрьская 124А</span>
+                                            <!--<div class="operation_mode">-->
+                                            <!--<div class="label">-->
+                                            <!--<i class="fa fa-clock-o" aria-hidden="true"></i>-->
+                                            <!--<span>Режим работы:</span>-->
+                                            <!--</div>-->
+                                            <!--<span class="time">10.00 - 18.00</span>-->
+                                            <!--</div>-->
+                                            <div class="geo">
+                                                <div class="label">
+                                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                    <span>Место проведения:</span>
+                                                </div>
+                                                <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -1410,18 +1432,30 @@
                             <div class="wrap_card">
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <img src="images/content/mod_puppies/img_card004.jpg" alt="">
-                                        <div class="breed">Английский коккер-спаниель</div>
+                                        <h3>Республиканская выставка породистых собак «Лидер - 2018»</h3>
+                                        <img src="images/content/mod_show_dogs/img_show_dogs002.jpg" alt="">
+
                                         <div class="fields">
-                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
-                                                <span>Мальчик</span></div>
-                                            <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                <span>19 ноября 2018</span>
+                                            <div class="period">
+                                                <div class="label">
+                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                    <span>Период проведения:</span></div>
+                                                <span class="start_date">19 ноября 2018</span>
+                                                <span class="end_date">21 ноября 2018</span>
                                             </div>
-                                            <div class="adress">
-                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Казахстан, г.Астана, ул.Кизибека Нургалиева 12</span>
+                                            <!--<div class="operation_mode">-->
+                                            <!--<div class="label">-->
+                                            <!--<i class="fa fa-clock-o" aria-hidden="true"></i>-->
+                                            <!--<span>Режим работы:</span>-->
+                                            <!--</div>-->
+                                            <!--<span class="time">10.00 - 18.00</span>-->
+                                            <!--</div>-->
+                                            <div class="geo">
+                                                <div class="label">
+                                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                    <span>Место проведения:</span>
+                                                </div>
+                                                <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -1455,28 +1489,8 @@
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
-                                    <select id="breed" class="form-control">
-                                        <option selected>Порода</option>
-                                        <option>Австралийская овчарка</option>
-                                        <option>Сибирский хаски</option>
-                                    </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
-                                <div class="select">
-                                    <select id="sex" class="form-control">
-                                        <option selected>Пол</option>
-                                        <option>Мужской</option>
-                                        <option>Женский</option>
-                                    </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
-                                <div class="select">
-                                    <select id="birthday" class="form-control">
-                                        <option selected>Дата рождения</option>
+                                    <select class="form-control">
+                                        <option selected>Период проведения</option>
                                         <option>Календарь</option>
                                     </select>
                                     <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
@@ -1484,22 +1498,12 @@
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
-                                    <select id="map" class="form-control">
-                                        <option selected>Местоположение</option>
+                                    <select class="form-control">
+                                        <option selected>Место проведения</option>
                                         <option>Карта</option>
                                     </select>
                                     <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
                                 </div>
-                            </div>
-                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
-                                <div class="select">
-                                    <select id="price" class="form-control">
-                                        <option selected>Цена</option>
-                                        <option>500 руб.</option>
-                                    </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
-                                </div>
-
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <button type="submit">
