Улучшено отображение иконок модуля объявлений о продаже щенков

--- a/src/index.html
+++ b/src/index.html
@@ -509,8 +509,8 @@
                                             терьер
                                         </div>
                                         <div class="fields">
-                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
-                                                <span>Мальчик</span></div>
+                                            <div class="sex"><i class="fa fa-venus" aria-hidden="true"></i>
+                                                <span>Девочка</span></div>
                                             <div class="birthday">
                                                 <i class="fa fa-calendar" aria-hidden="true"></i>
                                                 <span>19 ноября 2018</span>
