Добавлена структура и стили для модуля новые статьи

--- a/src/index.html
+++ b/src/index.html
@@ -1519,18 +1519,88 @@
                     <div class="add_post">
                         <a href="">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <span>Добавить объявление</span>
+                            <span>Добавить выставку</span>
                         </a>
                     </div>
                     <div class="all_post">
                         <a href="">
                             <i class="fa fa-eye" aria-hidden="true"></i>
-                            <span>Смотреть все объявления</span>
+                            <span>Смотреть все выставки</span>
                         </a>
                     </div>
 
                 </div>
             </div><!--end /#mod_show_dogs-->
+            <div id="mod_new_articles">
+                <div class="mod_title">
+                    <h2>Новые статьи</h2>
+                </div>
+                <div class="block_articles">
+                            <div class="article">
+                                <a class="img" href="#">
+                                    <img src="images/content/mod_new_articles/image1.jpg" alt="">
+                                </a>
+                                <div class="data">
+                                    24 января 2019
+                                </div>
+                                <div class="title">
+                                    <a href="#">
+                                        Отправляясь в поход с вашим питомцем учтите эти особенности...
+                                    </a>
+
+                                </div>
+                            </div><!--end /.article-->
+                            <div class="article">
+                                <a class="img" href="#">
+                                    <img src="images/content/mod_new_articles/image1.jpg" alt="">
+                                </a>
+                                <div class="data">
+                                    24 января 2019
+                                </div>
+                                <div class="title">
+                                    <a href="#">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet animi aspernatur aut cupiditate debitis distinctio, exercitationem incidunt itaque minima, nihil nostrum odit officia, possimus qui veritatis voluptatem. Esse, maxime.
+                                    </a>
+
+                                </div>
+                            </div><!--end /.article-->
+                            <div class="article">
+                                <a class="img" href="#">
+                                    <img src="images/content/mod_new_articles/image1.jpg" alt="">
+                                </a>
+                                <div class="data">
+                                    24 января 2019
+                                </div>
+                                <div class="title">
+                                    <a href="#">
+                                        Отправляясь в поход с вашим питомцем учтите эти особенности...
+                                    </a>
+
+                                </div>
+                            </div><!--end /.article-->
+                            <div class="article">
+                                <a class="img" href="#">
+                                    <img src="images/content/mod_new_articles/image1.jpg" alt="">
+                                </a>
+                                <div class="data">
+                                    24 января 2019
+                                </div>
+                                <div class="title">
+                                    <a href="#">
+                                        Отправляясь в поход с вашим питомцем учтите эти особенности...
+                                    </a>
+
+                                </div>
+                            </div><!--end /.article-->
+                </div><!--end /.block_articles-->
+                <div class="all_articles">
+                    <a href="">
+                        <i class="fa fa-eye" aria-hidden="true"></i>
+                        <span>Смотреть все статьи</span>
+                    </a>
+
+                </div>
+            </div><!--end /#mod_new_articles -->
         </div><!--end /.wrapper_content-->
     </div>
 </section>
