Добавлена структура и стили для модуля нижних баннеров

--- a/src/index.html
+++ b/src/index.html
@@ -1601,6 +1601,24 @@
 
                 </div>
             </div><!--end /#mod_new_articles -->
+            <div id="mod_slider_bottom" class="mod_slider">
+                <div class="owl-carousel owl-theme">
+                    <div class="item"><a href=""><img src="images/content/mod_news/main_new.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_2.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_3.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_4.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_1.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_3.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_2.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_4.jpg" alt=""></a></div>
+                </div>
+                <div class="owl-nav">
+                    <a class="owl-prev"><i class="fa fa-chevron-left fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a class="owl-next"><i class="fa fa-chevron-right fa-3x" aria-hidden="true"></i>
+                    </a>
+                </div><!-- end /.owl-nav -->
+            </div><!-- end/#mod_slider_bottom-->
         </div><!--end /.wrapper_content-->
     </div>
 </section>
