Добавлена структура и стили для футера сайта

--- a/src/index.html
+++ b/src/index.html
@@ -1623,6 +1623,34 @@
     </div>
 </section>
 <footer id="footer">
+    <div class="footer_top">
+        <div class="container">
+            <div class="wrap_footer_top">
+                <div class="left_block">
+                    <h2>Заголовок левого блока</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet cupiditate debitis deleniti doloribus ex fugit hic in incidunt maiores nam nobis, non nostrum omnis possimus, quisquam rem, sequi veritatis voluptate?
+                    </p>
+
+                </div><!--end /.left_block-->
+                <div class="center_block">
+                    <h2>Заголовок центрального блока</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi enim laborum, non nulla optio pariatur praesentium quas tempora veniam voluptate! Consequatur doloremque, est harum hic ipsa perferendis quos ratione vitae?</p>
+                </div><!-- end /.center_block-->
+                <div class="right_block">
+                    <h2>Заголовок правого блока</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci commodi deleniti dicta eligendi expedita nesciunt nobis, odit, perspiciatis provident quaerat vitae. Illo labore natus, nihil omnis quod tenetur ullam.
+                </div><!-- /.right_block-->
+            </div><!-- /.wrap_footer-->
+        </div><!--end /.container-->
+    </div><!--end /.footer_top-->
+    <div class="footer_bottom">
+        <div class="container">
+            <div class="wrap_footer_bottom">
+                <p>Все права защищены. 2019 год.</p>
+            </div>
+        </div>
+    </div>
 
 </footer>
 
