Добавлены  правки в идентификаторы фильтров

--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
                                             <span class="key-icon">
                                                 <i class="fa fa-key" aria-hidden="true"></i>
                                             </span>
-                                            <input id="modlgn-passwd" type="password" name="password"
+                                            <input id="psw" type="password" name="password"
                                                    class="input-small" tabindex="0" size="18" placeholder="Пароль">
                                         </div>
                                     </div>
@@ -647,7 +647,7 @@
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
-                                    <select id="breed" class="form-control">
+                                    <select id="puppy_breed" class="form-control">
                                         <option selected>Порода</option>
                                         <option>Австралийская овчарка</option>
                                         <option>Сибирский хаски</option>
@@ -657,7 +657,7 @@
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
-                                    <select id="sex" class="form-control">
+                                    <select id="puppy_sex" class="form-control">
                                         <option selected>Пол</option>
                                         <option>Мужской</option>
                                         <option>Женский</option>
@@ -676,7 +676,7 @@
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
-                                    <select id="map" class="form-control">
+                                    <select id="puppy_map" class="form-control">
                                         <option selected>Местоположение</option>
                                         <option>Карта</option>
                                     </select>
@@ -937,7 +937,7 @@
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
-                                    <select id="map" class="form-control">
+                                    <select id="missing_map" class="form-control">
                                         <option selected>Место пропажи</option>
                                         <option>Карта</option>
                                     </select>
@@ -946,7 +946,7 @@
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
-                                    <select id="birthday" class="form-control">
+                                    <select id="date_missing" class="form-control">
                                         <option selected>Дата пропажи</option>
                                         <option>Календарь</option>
                                     </select>
@@ -955,7 +955,7 @@
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
-                                    <select id="breed" class="form-control">
+                                    <select id="search_breed" class="form-control">
                                         <option selected>Порода</option>
                                         <option>Австралийская овчарка</option>
                                         <option>Сибирский хаски</option>
@@ -965,7 +965,7 @@
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
-                                    <select id="sex" class="form-control">
+                                    <select id="missing_sex" class="form-control">
                                         <option selected>Пол</option>
                                         <option>Мужской</option>
                                         <option>Женский</option>
@@ -1204,7 +1204,7 @@
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
-                                    <select id="map" class="form-control">
+                                    <select id="search_map" class="form-control">
                                         <option selected>Место положение</option>
                                         <option>Карта</option>
                                     </select>
@@ -1223,7 +1223,7 @@
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
-                                    <select id="sex" class="form-control">
+                                    <select id="search_sex" class="form-control">
                                         <option selected>Пол</option>
                                         <option>Мужской</option>
                                         <option>Женский</option>
