Добавлена страница статьи. Настроены стили и адаптация

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="libs/owl-сarousel2-2.3.4/css/owl.carousel.min.css">
     <link rel="stylesheet" href="libs/owl-сarousel2-2.3.4/css/owl.theme.default.min.css"/>
     <link rel="stylesheet" href="css/fonts.css"/>
+    <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
@@ -264,10 +265,10 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-7 ">
-                            <div class="logo_title">
+                            <div class="logo_title animated rubberBand">
                                 <span>ProDogs.Info</span>
                             </div>
-                            <div class="logo_slogan">
+                            <div class="logo_slogan animated rubberBand delay-1s">
                                 Всё о мире собак
                             </div>
                         </div>
@@ -437,7 +438,7 @@
                     </a>
                 </div><!-- end /.owl-nav -->
             </div><!-- end/#mod_slider_top-->
-            <div id="mod_puppies" class="mod_puppies">
+            <div id="mod_puppies" class="mod_puppies animated bounceIn delay-1s">
                 <div class="mod_title">
                     <h2>Продаются щенки</h2>
                     <div class="link_help">
