--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
 <section id="content">
     <div class="container">
         <div class="wrapper_content">
-            <div id="mod_news" class="mod_news wow zoomIn" data-wow-offset="10" data-wow-duration="2s">
+            <div id="mod_news" class="mod_news">
                 <h2>Новости</h2>
                 <div class="row">
                     <div class="col-sm-12 col-lg-6">
@@ -448,7 +448,7 @@
                 <div class="block_cards">
                     <div class="row no-gutters">
                         <div class="col-12 col-sm-6 col-lg-3">
-                            <div class="wrap_card wow zoomIn delay-1s">
+                            <div class="wrap_card">
                                 <div class="meta_info">
                                     <div class="top">
                                         <i class="fa fa-star fa-lg" aria-hidden="true"></i>
@@ -496,7 +496,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3">
-                            <div class="wrap_card wow zoomIn delay-2s">
+                            <div class="wrap_card">
                                 <div class="meta_info">
                                     <div class="top">
                                         <i class="fa fa-star fa-lg" aria-hidden="true"></i>
@@ -546,7 +546,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3">
-                            <div class="wrap_card wow zoomIn delay-1s">
+                            <div class="wrap_card">
                                 <div class="meta_info">
                                     <div class="top">
                                         <i class="fa fa-star fa-lg" aria-hidden="true"></i>
@@ -594,7 +594,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3">
-                            <div class="wrap_card wow zoomIn delay-2s">
+                            <div class="wrap_card">
                                 <div class="meta_info">
                                     <div class="top">
                                         <i class="fa fa-star fa-lg" aria-hidden="true"></i>
@@ -720,7 +720,7 @@
 
                 </div>
             </div>
-            <div id="mod_search_dog" class="mod_search_dog wow zoomIn" data-wow-duration="2s" data-wow-delay="1s">
+            <div id="mod_search_dog" class="mod_search_dog">
                 <div class="mod_title">
                     <h2>Розыск собаки</h2>
                     <div class="link_help">
@@ -1000,7 +1000,7 @@
 
                 </div>
             </div><!--end /#mod_search_dog-->
-            <div id="mod_search_owner" class="mod_search_owner wow zoomIn" data-wow-duration="2s" data-wow-delay="1s">
+            <div id="mod_search_owner" class="mod_search_owner">
                 <div class="mod_title">
                     <h2>Ищу хозяина</h2>
                     <div class="link_help">
@@ -1258,7 +1258,7 @@
 
                 </div>
             </div><!--end /#mod_search_owner-->
-            <div id="mod_show_dogs" class="show_dogs wow zoomIn" data-wow-duration="2s" data-wow-delay="1s">
+            <div id="mod_show_dogs" class="show_dogs">
                 <div class="mod_title">
                     <h2>Выставки собак</h2>
                     <div class="link_help">
@@ -1532,7 +1532,7 @@
 
                 </div>
             </div><!--end /#mod_show_dogs-->
-            <div id="mod_new_articles" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="1s">
+            <div id="mod_new_articles">
                 <div class="mod_title">
                     <h2>Новые статьи</h2>
                 </div>
@@ -1667,7 +1667,7 @@
 <script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 <script src="libs/owl-сarousel2-2.3.4/js/owl.carousel.min.js"></script>
 <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-<script src="js/wow.min.js"></script>
+<!--<script src="js/wow.min.js"></script>-->
 <script src="js/common.js"></script>
 
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
