Перенастроены цвета иконок в модулях поиска собаки, розыска хозяина, выставки собак

--- a/src/article.html
+++ b/src/article.html
@@ -229,7 +229,7 @@
                         </form>
                     </div>
                     <div class="search_form">
-                        <form action=/" method="post" class="form-inline">
+                        <form action="/" method="post" class="form-inline">
                             <div class="icon_search">
                                 <img src="images/header/search_form/icon_search_form.png" alt="">
                             </div>
