--- a/src/index.html
+++ b/src/index.html
@@ -230,7 +230,7 @@
                         </form>
                     </div>
                     <div class="search_form">
-                        <form action=/" method="post" class="form-inline">
+                        <form action="/" method="post" class="form-inline">
                             <div class="icon_search">
                                 <img src="images/header/search_form/icon_search_form.png" alt="">
                             </div>
@@ -644,7 +644,7 @@
                     </div>
                 </div>
                 <div class="filters">
-                    <form action="">
+                    <form action="/">
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
@@ -934,7 +934,7 @@
                     </div>
                 </div>
                 <div class="filters">
-                    <form action="">
+                    <form action="/">
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
@@ -1201,7 +1201,7 @@
                     </div>
                 </div>
                 <div class="filters">
-                    <form action="">
+                    <form action="/">
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
                                 <div class="select">
@@ -1486,7 +1486,7 @@
                     </div>
                 </div>
                 <div class="filters">
-                    <form action="">
+                    <form action="/">
                         <div class="form-row">
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
